// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`includes the options given to it 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value={undefined}
>
  <option
    style={undefined}
    value="apple"
  >
    apple
  </option>
  <option
    style={undefined}
    value="peppermint"
  >
    peppermint
  </option>
  <option
    style={undefined}
    value="banana"
  >
    banana
  </option>
  <option
    style={undefined}
    value="cinnamon"
  >
    cinnamon
  </option>
  <option
    style={undefined}
    value="cherry"
  >
    cherry
  </option>
</select>
`;

exports[`styles includes the null style on the menu itself 1`] = `
<select
  onChange={[Function]}
  style={
    Object {
      "background": "red",
    }
  }
  value={undefined}
>
  <option
    style={undefined}
    value="apple"
  >
    apple
  </option>
</select>
`;

exports[`styles includes the passed styles 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value={undefined}
>
  <option
    style={
      Object {
        "background": "red",
      }
    }
    value="apple"
  >
    apple
  </option>
  <option
    style={undefined}
    value="banana"
  >
    banana
  </option>
</select>
`;

exports[`styles it works with empty styles 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value={undefined}
>
  <option
    style={undefined}
    value="apple"
  >
    apple
  </option>
</select>
`;

exports[`styles it works with unused styles 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value={undefined}
>
  <option
    style={undefined}
    value="apple"
  >
    apple
  </option>
</select>
`;

exports[`styles it works without any styles 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value={undefined}
>
  <option
    style={undefined}
    value="apple"
  >
    apple
  </option>
</select>
`;

exports[`uses the passed in value if present 1`] = `
<select
  onChange={[Function]}
  style={undefined}
  value="b"
>
  <option
    style={undefined}
    value="a"
  >
    a
  </option>
  <option
    style={undefined}
    value="p"
  >
    p
  </option>
  <option
    style={undefined}
    value="b"
  >
    b
  </option>
  <option
    style={undefined}
    value="c"
  >
    c
  </option>
</select>
`;
